--- a/stylsheet.css
+++ b/stylsheet.css
@@ -95,7 +95,9 @@ body {
 
 }
 
- .hero-img {
+.hero-img {
+
+
     text-align: center;
     position: relative;
     /* border: 2px solid blue;  */
@@ -129,7 +131,7 @@ body {
 }
 
 .hero-text>h1 {
-    margin-top: 2.5rem ;
+    margin-top: 2.5rem;
     margin-bottom: .5rem;
 }
 
@@ -140,7 +142,7 @@ body {
 .hero-btn {
     display: flex;
     justify-content: center;
-    gap:.5rem ;
+    gap: .5rem;
 }
 
 .hero-text>h1 {
@@ -163,7 +165,7 @@ body {
 
 .subs-btn>a {
     color: #00FF88;
-    
+
     font-size: 1rem;
 }
 
@@ -197,4 +199,45 @@ body {
     .btn {
         display: none;
     }
+
+
+    /* It is for hero/banner screen section  */
+
+    #hero-section {
+        padding: 2.5rem 1.25rem;
+        width: 29.75;
+        height: 29.1rem;
+        margin: 0 auto;
+
+    }
+
+    .hero-img {
+        width: 25rem;
+        margin: 0 auto;
+
+    }
+
+    .hero-circle {
+        width: 13.5rem;
+        height: 13.5rem;
+
+    }
+
+    .hero-microphone {
+        width: 3.9rem;
+        height: 5.375rem;
+        margin-left: .5rem;
+        margin-top: .5rem;
+    }
+
+    .hero-img>p {
+
+        margin-left: 252px;
+    }
+
+    .hero-text>h1 {
+        font-size: 2.5rem;
+    }
+
+
 }
