--- a/stylsheet.css
+++ b/stylsheet.css
@@ -92,6 +92,7 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     padding: 6.25rem 32.5rem;
+    margin: 0 auto;
 
 }
 
@@ -169,6 +170,66 @@ body {
     font-size: 1rem;
 }
 
+/* it is main section about part  */
+
+#main-section-one {
+
+    padding: 3.125rem 12.5rem 0 12.5rem;
+    margin: 0 auto;
+}
+
+.main-about {
+
+    display: grid;
+    text-align: center;
+}
+
+.main-about>h2 {
+    font-size: 3rem;
+    margin-bottom: 1rem;
+}
+
+.main-about>p {
+    font-size: 1rem;
+    font-weight: 300;
+}
+
+.hr-line {
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+    border: 1px solid rgba(255, 255, 255, 0.181);
+}
+
+.rating-card {
+    display: grid;
+    grid-template-columns: repeat(4,4fr);
+    margin-bottom: 7.5rem;
+    text-align: center;
+    gap: 5rem;
+}
+
+.rating-card>.card>h1 {
+    font-size: 3rem;
+    font-weight: 900;
+    color: #00FF88;
+    margin-bottom: 1rem;
+
+}
+
+.rating-card>.card>p {
+
+    font-size: 1rem;
+    font-weight: 300;
+
+}
+
+.card-img>img {
+    /* background-color: #00FF88; */
+    color: #00FF88;
+}
+
+
+
 
 
 
@@ -179,7 +240,7 @@ body {
 
 /* For mobile screen  */
 @media screen and (max-width:576px) {
-    /* its nav section  */
+    /* its nav mobile screen section  */
 
     #header-container>.nav-container {
         padding: 1.25rem;
