--- a/stylsheet.css
+++ b/stylsheet.css
@@ -175,7 +175,7 @@ body {
 #main-section-one {
 
     padding: 3.125rem 12.5rem 0 12.5rem;
-    margin: 0 auto;
+    /* margin: 0 auto;  */
 }
 
 .main-about {
@@ -222,6 +222,87 @@ body {
     font-weight: 300;
 
 }
+
+/* it is choose techwave section  */
+
+#main-section-two {
+    padding: 7.5rem 12.5rem 7.5rem 12.5rem;
+    background-color: #230E3D ;
+    /* border: 1px solid red;  */
+}
+
+#main-section-two>h1 {
+    font-size: 3rem;
+    margin-bottom: 2.5rem;
+    text-align: center;
+}
+/* card  */
+
+.choosetechwave-card {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(3,1fr);
+    gap: 1.875rem;
+}
+
+.chosse-1 {
+    align-content: center;
+    grid-row: span 2;
+}
+
+.chosse-2 {
+    grid-column: span 2;
+}
+
+.choose-card {        
+    border-radius: 2.5rem;
+    background-color: #351165 ;
+    padding: 2.5rem;
+}
+
+.choose-card>img {
+    margin-bottom: 1rem;
+
+}
+
+.choose-card>h4 {
+    font-size: 1.5rem;
+    font-weight: 700;
+    margin-bottom: 1rem;
+
+}
+
+.choose-card>p {
+    color: rgba(255, 255, 255, 0.668);
+    font-size: 1rem;
+    font-weight: 200;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -309,11 +390,37 @@ body {
     .rating-card {
         grid-template-columns: repeat(2,1fr);
         grid-template-rows: repeat(2,1fr);
+        margin-bottom: 1rem; 
 
     }
 
     .main-about>h2 {
         font-size: 2rem; 
+    }
+
+    /* its main section two mobile screen for choose techwave  */
+
+    #main-section-two {
+        padding: 2.5rem 1.25rem;
+    }
+
+    #main-section-two>h1 {
+
+        font-size: 2rem;
+    }
+
+    .choosetechwave-card {
+    /* display: grid;  */
+    grid-template-columns: repeat(1,1fr);
+    /* grid-template-rows: repeat(3,1fr);  */
+    gap: 1rem;
+    }
+
+    .choose-card {
+        align-content: center;
+        padding: 1.5rem;
+        grid-column: span 1;
+        grid-row: span 1;
     }
 
 
