--- a/stylsheet.css
+++ b/stylsheet.css
@@ -302,22 +302,7 @@ body {
 
 }
 
-/* .tube-video {
-    position: relative;
-     width: 23.75rem;
-    height: 13.375rem;
-    
 
-} */
-
-/* .play-btn {
-    position: absolute;
-    margin: auto;
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    margin-left: -200px;
-} */
 
 .video-card {
     display: grid;
@@ -333,7 +318,7 @@ body {
 }
 
 .video-card-All>iframe {
-    width: 23.75rem;
+    width: 22.1rem;
     height: 13.375rem;
     border-top-left-radius: 2rem;
     border-top-right-radius: 2rem;
@@ -378,7 +363,8 @@ body {
 }
 
 .meet-card {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr auto;
     gap: 1.5rem;
     padding: 2.5rem;
     background-color: #351165;
@@ -604,11 +590,11 @@ body {
     /* it is meet the host mobile screen style  */
 
     .meet-card {
-    flex-direction: column;
+    grid-template-columns: repeat(1,1fr);
     
-    align-items: center;
+    justify-items: center;
     
-    gap: 1rem;
+    
     padding: 1.5rem;
     background-color: #351165;
     border-radius: 2.5rem;
