--- a/stylsheet.css
+++ b/stylsheet.css
@@ -318,8 +318,8 @@ body {
 }
 
 .video-card-All>iframe {
-    width: 22.1rem;
-    height: 13.375rem;
+    width: 100%;
+    height: 200px; 
     border-top-left-radius: 2rem;
     border-top-right-radius: 2rem;
 }
